--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - master
     paths:
-      - 'microfrontend/container/**'
+      - 'container/**'
 
 defaults:
   run:
-    working-directory: microfrontend/container
+    working-directory: container
 
 jobs:
   build:
