--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -38,12 +38,12 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'container/**'
-
-defaults:
-  run:
-    working-directory: container
+#    paths:
+#      - 'container/**'
+#
+#defaults:
+#  run:
+#    working-directory: container
 
 jobs:
   build:
