--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,9 +7,9 @@ on:
     paths:
       - 'container/**'
 
-# defaults:
-#   run:
-#     working-directory: container
+defaults:
+  run:
+    working-directory: ./container
 
 jobs:
    build:
