--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,11 +20,11 @@ jobs:
  #      It is an official GitHub Action used to check out a repository so a workflow can access it.
        - uses: actions/checkout@v2
        - name: Install
-         working-directory: container
+         working-directory: ./container
          run: npm install
 
        - name: Build
-         working-directory: container
+         working-directory: ./container
          run: npm run build
 
  #     AWS service CLI actions
